# online-cinema-fastapi

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-tests.yml  pyproject.toml
.github/workflows/: cd_pipeline.yml  ci_pipeline.yml
commands/: deploy.sh  run_migration.sh
docker/nginx/: .env.sample
docker/tests/: Dockerfile
src/: main.py
src/config/: __init__.py  dependencies.py  get_admin.py  get_current_user.py  get_settings.py  settings.py
src/database/: __init__.py  populate_db.py  populate_db_run.py  session_db.py  session_sqlite.py
src/database/migrations/: env.py
src/database/models/: __init__.py  accounts.py  cart.py  movies.py  order.py  payments.py
src/database/validators/: accounts.py  profiles.py
src/exceptions/: __init__.py  security.py  storage.py
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: activation_complete.html  comment_like.html  comment_reply.html  password_reset_complete.html  password_reset_request.html  payment.html
src/routes/: __init__.py  accounts.py  admin.py  cart.py  genres.py  moderator.py  movies.py  order.py  payments.py  profiles.py  utils.py
src/schemas/: __init__.py  accounts.py  admin.py  cart.py  comments.py  genres.py  movies.py  order.py  payments.py  profiles.py  ratings.py
src/security/: http.py  token_manager.py
src/storages/: __init__.py  bucket_create.py  lifespan.py  s3.py
src/tasks/: __init__.py  celery_app.py  cleanup.py  comment_notifications.py  redis_blacklist.py
tests/: conftest.py  utils.py
tests/test_e2e/: test_email_notification.py  test_storage.py
tests/test_integration/: test_accounts.py  test_cart.py  test_movie_comments.py  test_movie_favourites.py  test_movie_reactions.py  test_movies.py  test_order.py  test_payments.py  test_profiles.py
(+21 files in other folders)
